create subscribe form #1

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -530,16 +530,24 @@ body {
 }
 
 .summer-sale {
+  background-image: url("../images/summer-sale-background.png");
+ background-size: cover;
+  position: relative;
+  bottom: 70px;
   &__container {
     width: 1171px;
     margin: 0 auto;
     height: 893px;
     background-color: #ffffff;
+    position: relative;
+    bottom: 95px;
   }
+
   &__main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding-top: 50px;
   }
 
   &__content {
@@ -655,6 +663,7 @@ body {
     width: 183px;
   }
 }
+
 .subscribe {
   display: flex;
   flex-direction: column;
@@ -671,27 +680,58 @@ body {
     align-items: center;
     border-top: 1px solid #c2c2c2;
   }
+
   &__wrapper {
     width: 654px;
-    height: 235px;
-    border: 1px solid red;
+    height: 220px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    margin-bottom: 56px;
+    padding-bottom: 20px;
+
   }
+
   &__title {
     color: #000000;
     font-size: 26px;
     font-weight: 800;
     margin-bottom: 14px;
+    margin-top: 70px;
   }
+
   &__text {
     color: #000000;
     font-size: 16px;
     font-weight: 500;
     margin-bottom: 34px;
   }
+
+  &__form input[type=text] {
+    width: 516px;
+    height: 38px;
+    border: 1px solid #a1a1a1;
+    background-color: #ffffff;
+  }
+
+  &__form input[type=submit] {
+    cursor: pointer;
+    width: 121px;
+    height: 38px;
+    background-color: #000000;
+    background-image: linear-gradient(to right, #f9236f 0%, #f92346 100%);
+    border: none;
+    color: #ffffff;
+    font-size: 13px;
+    font-weight: 700;
+    margin-left: 5px;
+  }
+}
+.logos {
+  width: 1609px;
+  height: 309px;
+  background-color: #eeeeee;
 }
 
 
