--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,7 +88,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-left: 35px;
+    margin-left: 20px;
   }
 
   .fa {
@@ -531,16 +531,18 @@ body {
 
 .summer-sale {
   background-image: url("../images/summer-sale-background.png");
- background-size: cover;
+  background-size: cover;
   position: relative;
   bottom: 70px;
+
   &__container {
     width: 1171px;
     margin: 0 auto;
-    height: 893px;
+    height: 920px;
     background-color: #ffffff;
     position: relative;
     bottom: 95px;
+    z-index: 1;
   }
 
   &__main {
@@ -689,8 +691,6 @@ body {
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 56px;
-    padding-bottom: 20px;
-
   }
 
   &__title {
@@ -728,10 +728,179 @@ body {
     margin-left: 5px;
   }
 }
+
 .logos {
-  width: 1609px;
   height: 309px;
   background-color: #eeeeee;
+  position: relative;
+  bottom: 254px;
+  z-index: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  &__container {
+    width: 1171px;
+    margin: 0 auto;
+    margin-top: 67px;
+  }
+}
+
+.footer {
+  height: 685px;
+  background-image: url("../images/footer-background.png");
+  background-size: cover;
+  margin-top: -255px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__container {
+    width: 1171px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1126px;
+  }
+
+  &__title {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 800;
+    margin-bottom: 25px;
+  }
+
+  &__info {
+    width: 249px;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 24px;
+    margin-bottom: 35px;
+  }
+
+  &__contacts {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 30px;
+  }
+
+  &__column {
+    width: 305px;
+    height: 280px;
+  }
+  &__column:nth-child(2) {
+    width: 250px;
+  }
+  &__column:nth-child(3) {
+    width: 250px;
+  }
+  &__column:nth-child(4) {
+    width: 285px;
+  }
+  &__icon {
+    margin-right: 8px;
+  }
+
+  &__link {
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 40px;
+    font-weight: 500;
+  }
+
+  &__socials {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 274px;
+  }
+
+  .fa-facebook, .fa-twitter, .fa-rss, .fa-google-plus, .fa-pinterest-p, .fa-vimeo {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    text-transform: uppercase;
+  }
+
+  &__social-item span {
+    margin-right: 10px;
+  }
+
+  &__contain:nth-child(2) {
+    margin-top: 54px;
+  }
+
+  &__payments {
+    opacity: 0.6;
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 21.56px;
+    text-transform: uppercase;
+  }
+
+  &__payments span {
+    margin-right: 10px;
+  }
+
+  &__menu {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-top: 64px;
+  }
+
+  &__menu-list {
+    width: 543px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &__menu-item {
+    display: inline-block;
+  }
+
+  &__menu-link {
+    cursor: pointer;
+  }
+
+  &__copyright {
+    margin-top: 39px;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 30px;
+  }
+
+  &__copyright span:first-child {
+    padding-right: 8px;
+  }
+
+  &__copyright span:last-child {
+    padding-left: 10px;
+    border-left: 1px solid #ffffff;
+  }
 }
 
 
