--- a/styles/main.css
+++ b/styles/main.css
@@ -209,7 +209,7 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-between; }
+    justify-content: center; }
   .promotion .banner__item {
     width: 536px;
     height: 292px;
@@ -218,6 +218,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     position: relative; }
+  .promotion .banner__item:first-child {
+    margin-right: 35px; }
   .promotion .banner__wrapper {
     width: 230px;
     height: 215px;
@@ -753,10 +755,14 @@ body {
     font-size: 14px; }
   .promotion .banner__image {
     width: 100%;
-    opacity: 0.5; }
+    opacity: 0.3;
+    height: fit-content; }
   .promotion .banner__item {
     width: 335px;
-    height: 278px; }
+    height: 278px;
+    background-color: white; }
+  .promotion .banner__item:first-child {
+    margin-right: 30px; }
   .promotion .banner__wrapper {
     margin-top: 40px; }
   .promotion .products {
@@ -767,9 +773,9 @@ body {
       justify-content: space-evenly; }
 
   .latest-news {
-    height: 2180px; }
+    height: 2130px; }
     .latest-news__heading {
-      margin-top: 108px; }
+      margin-top: 90px; }
 
   .latest-news__content {
     display: flex;
@@ -787,7 +793,7 @@ body {
     display: none; }
   .summer-sale .subscribe__wrapper {
     width: 100%; }
-  .summer-sale .subscribe__form input[type=submit] {
+  .summer-sale .subscribe__form input[type=text] {
     width: auto; }
 
   .footer {
@@ -797,6 +803,59 @@ body {
     .footer__content {
       display: flex;
       flex-direction: column;
-      align-items: center; } }
+      align-items: center; }
+    .footer__link {
+      line-height: 32px; }
+    .footer__copyright {
+      margin-bottom: 40px; } }
+@media (max-width: 768px) {
+  .meStore__email {
+    display: none; }
+
+  .fashion-carnival__content {
+    width: 100%; }
+  .fashion-carnival__title {
+    font-size: 93px; }
+
+  .promotion {
+    height: auto; }
+    .promotion__container {
+      height: auto; }
+    .promotion .benefits {
+      height: auto; }
+      .promotion .benefits__icon {
+        width: 115px;
+        height: 115px; }
+      .promotion .benefits__title {
+        font-size: 20px; }
+      .promotion .benefits__details {
+        text-align: center;
+        line-height: 18px; }
+    .promotion .products__item:nth-child(2) {
+      display: none; }
+    .promotion .banner {
+      height: auto; }
+      .promotion .banner__content {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center; }
+      .promotion .banner__item {
+        margin: 0 auto;
+        width: 100%; }
+      .promotion .banner__item:first-child {
+        margin-bottom: 30px; }
+
+  .latest-news {
+    height: 2005px; }
+    .latest-news__heading {
+      margin-top: 62px; }
+    .latest-news__content {
+      padding: 0;
+      height: 1675px; }
+    .latest-news__item {
+      width: 100%;
+      margin: 10px; } }
 
 /*# sourceMappingURL=main.css.map */
