--- a/styles/main.css
+++ b/styles/main.css
@@ -1006,7 +1006,79 @@ body {
     font-size: 17px; }
   .promotion .banner__item:first-child {
     background-color: #fee3ece3; }
+  .promotion .banner__item:nth-child(2) {
+    background-color: #F2F3F4; }
   .promotion .banner__img {
-    background-color: #ffffff; } }
+    background-color: #ffffff; }
+  .promotion .banner__item {
+    height: 292px;
+    border: transparent; }
+  .promotion .products {
+    text-align: center;
+    margin-top: 65px; }
+    .promotion .products__title {
+      font-size: 23px; }
+    .promotion .products__subtitle {
+      font-size: 14px; }
+
+  .latest-news__info {
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 30px; }
+  .latest-news__title {
+    font-size: 15px;
+    text-align: center; }
+  .latest-news__subtitle {
+    font-size: 12px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 12px; }
+  .latest-news__text {
+    font-size: 13px; }
+  .latest-news__container {
+    padding: 0 20px; }
+
+  .summer-sale__container {
+    padding: 0 20px; }
+  .summer-sale .subscribe__container {
+    height: auto;
+    padding: 0 20px; }
+  .summer-sale .subscribe__title {
+    margin-top: 45px;
+    font-size: 20px; }
+  .summer-sale .subscribe__text {
+    font-size: 12px; }
+  .summer-sale .subscribe__form input[type=submit] {
+    margin-top: 5px; }
+
+  .logos__container {
+    padding: 0 20px; }
+
+  .footer__container {
+    padding: 0 20px; }
+  .footer__content {
+    padding: 0 20px; }
+  .footer__menu {
+    display: none; }
+  .footer__row {
+    display: flex;
+    flex-direction: column; }
+  .footer__column:first-child {
+    width: auto; }
+  .footer__column:nth-child(2) {
+    width: auto; } }
+@media (max-width: 399px) {
+  .promotion .banner__image {
+    display: none; }
+  .promotion .banner__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .promotion .banner__wrapper {
+    text-align: center;
+    margin: 0; }
+  .promotion .banner__btn:nth-child(2) {
+    background-image: linear-gradient(to right, #4694e2 0%, #1874d0 100%); } }
 
 /*# sourceMappingURL=main.css.map */
